--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=project
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Chandini@5d2
+spring.datasource.username=your_database_username
+spring.datasource.password=your_database_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
